# l7na

./: .gitconfig  .gitignore  CMakeLists.txt  Makefile  README.md  api.h  drives.h  klm.c  l7na.files  l7na.includes  main.c  main.c.bckp  main3.c  reporter.mk  run.sh  servo.conf  servo.conf.best.velocity
scripts/: read_drives_regs.sh  read_regs.sh  wr.sh
src/: CMakeLists.txt
src/l7na/: CMakeLists.txt  configfile.h  drives.h  exceptions.h  logger.h  types.h
src/l7na/details/: axisparams.cpp  axisparams.h  configfile.cpp  drives.cpp  logger.cpp  logger.h  types_int.h
src/utils/: CMakeLists.txt  example.cpp  servotech.c  servotech3.c  servotests.cpp  test.cpp
